--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calendar-puzzle-solver",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://restingsound.github.io/calendar-puzzle-solver",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -14,6 +14,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
-    "@types/react": "^17.0.11"
+    "@types/react": "^17.0.11",
+    "gh-pages": "^3.2.3"
   }
 }
