--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.3.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -42,6 +41,8 @@
   "devDependencies": {
     "@types/lodash": "^4.14.170",
     "@types/react": "^17.0.11",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
