--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,11 @@
 {
-  "short_name": "Calendar Puzzle Sulver",
+  "short_name": "Calendar Puzzle Solver",
   "name": "Calendar Puzzle Solver with Day of Week",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "images/calendarIcon.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "32x37"
     }
   ],
   "start_url": ".",
